build/TechShiftModernize.template.yaml
Resources:
  LogGroupF5B46931:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /cdk/fargate
      RetentionInDays: 30
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: TechShiftModernize/LogGroup/Resource
  MyVpcF9F0CA6F:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyVpc
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/Resource
  MyVpcPublicSubnet1SubnetF6608456:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.0.0/18
      VpcId:
        Ref: MyVpcF9F0CA6F
      AvailabilityZone: ap-southeast-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyVpc/PublicSubnet1
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PublicSubnet1/Subnet
  MyVpcPublicSubnet1RouteTableC46AB2F4:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MyVpcF9F0CA6F
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PublicSubnet1/RouteTable
  MyVpcPublicSubnet1RouteTableAssociation2ECEE1CB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: MyVpcPublicSubnet1RouteTableC46AB2F4
      SubnetId:
        Ref: MyVpcPublicSubnet1SubnetF6608456
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PublicSubnet1/RouteTableAssociation
  MyVpcPublicSubnet1DefaultRoute95FDF9EB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: MyVpcPublicSubnet1RouteTableC46AB2F4
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: MyVpcIGW5C4A4F63
    DependsOn:
      - MyVpcVPCGW488ACE0D
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PublicSubnet1/DefaultRoute
  MyVpcPublicSubnet1EIP096967CB:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PublicSubnet1/EIP
  MyVpcPublicSubnet1NATGatewayAD3400C1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - MyVpcPublicSubnet1EIP096967CB
          - AllocationId
      SubnetId:
        Ref: MyVpcPublicSubnet1SubnetF6608456
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PublicSubnet1/NATGateway
  MyVpcPublicSubnet2Subnet492B6BFB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.64.0/18
      VpcId:
        Ref: MyVpcF9F0CA6F
      AvailabilityZone: ap-southeast-1b
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyVpc/PublicSubnet2
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PublicSubnet2/Subnet
  MyVpcPublicSubnet2RouteTable1DF17386:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MyVpcF9F0CA6F
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PublicSubnet2/RouteTable
  MyVpcPublicSubnet2RouteTableAssociation227DE78D:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: MyVpcPublicSubnet2RouteTable1DF17386
      SubnetId:
        Ref: MyVpcPublicSubnet2Subnet492B6BFB
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PublicSubnet2/RouteTableAssociation
  MyVpcPublicSubnet2DefaultRoute052936F6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: MyVpcPublicSubnet2RouteTable1DF17386
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: MyVpcIGW5C4A4F63
    DependsOn:
      - MyVpcVPCGW488ACE0D
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PublicSubnet2/DefaultRoute
  MyVpcPublicSubnet2EIP8CCBA239:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PublicSubnet2/EIP
  MyVpcPublicSubnet2NATGateway91BFBEC9:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - MyVpcPublicSubnet2EIP8CCBA239
          - AllocationId
      SubnetId:
        Ref: MyVpcPublicSubnet2Subnet492B6BFB
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PublicSubnet2/NATGateway
  MyVpcPrivateSubnet1Subnet5057CF7E:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.128.0/18
      VpcId:
        Ref: MyVpcF9F0CA6F
      AvailabilityZone: ap-southeast-1a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyVpc/PrivateSubnet1
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PrivateSubnet1/Subnet
  MyVpcPrivateSubnet1RouteTable8819E6E2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MyVpcF9F0CA6F
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyVpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PrivateSubnet1/RouteTable
  MyVpcPrivateSubnet1RouteTableAssociation56D38C7E:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: MyVpcPrivateSubnet1RouteTable8819E6E2
      SubnetId:
        Ref: MyVpcPrivateSubnet1Subnet5057CF7E
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PrivateSubnet1/RouteTableAssociation
  MyVpcPrivateSubnet1DefaultRouteA8CDE2FA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: MyVpcPrivateSubnet1RouteTable8819E6E2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: MyVpcPublicSubnet1NATGatewayAD3400C1
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PrivateSubnet1/DefaultRoute
  MyVpcPrivateSubnet2Subnet0040C983:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.192.0/18
      VpcId:
        Ref: MyVpcF9F0CA6F
      AvailabilityZone: ap-southeast-1b
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyVpc/PrivateSubnet2
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PrivateSubnet2/Subnet
  MyVpcPrivateSubnet2RouteTableCEDCEECE:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MyVpcF9F0CA6F
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyVpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PrivateSubnet2/RouteTable
  MyVpcPrivateSubnet2RouteTableAssociation86A610DA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: MyVpcPrivateSubnet2RouteTableCEDCEECE
      SubnetId:
        Ref: MyVpcPrivateSubnet2Subnet0040C983
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PrivateSubnet2/RouteTableAssociation
  MyVpcPrivateSubnet2DefaultRoute9CE96294:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: MyVpcPrivateSubnet2RouteTableCEDCEECE
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: MyVpcPublicSubnet2NATGateway91BFBEC9
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/PrivateSubnet2/DefaultRoute
  MyVpcIGW5C4A4F63:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyVpc
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/IGW
  MyVpcVPCGW488ACE0D:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: MyVpcF9F0CA6F
      InternetGatewayId:
        Ref: MyVpcIGW5C4A4F63
    Metadata:
      aws:cdk:path: TechShiftModernize/MyVpc/VPCGW
  MyCfnDns:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Name: cdk-ecslab
      Vpc:
        Ref: MyVpcF9F0CA6F
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCfnDns
  MyCfnService:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      DnsConfig:
        DnsRecords:
          - TTL: "60"
            Type: A
        NamespaceId:
          Fn::GetAtt:
            - MyCfnDns
            - Id
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: cdk-mysql-service
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCfnService
  MyCluster4C1BA579:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/Resource
  MyClusterDefaultAutoScalingGroupInstanceSecurityGroup5DFF182A:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/InstanceSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        []
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyCluster/DefaultAutoScalingGroup
      VpcId:
        Ref: MyVpcF9F0CA6F
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/InstanceSecurityGroup/Resource
  MyClusterDefaultAutoScalingGroupInstanceSecurityGroupfromTechShiftModernizeLBSecurityGroupFDA228B38096FF3CEB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 80
      GroupId:
        Fn::GetAtt:
          - MyClusterDefaultAutoScalingGroupInstanceSecurityGroup5DFF182A
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - LBSecurityGroup8A41EA2B
          - GroupId
      ToPort: 80
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/InstanceSecurityGroup/from
        TechShiftModernizeLBSecurityGroupFDA228B3:80
  MyClusterDefaultAutoScalingGroupInstanceRole2724F473:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/InstanceRole/Resource
  MyClusterDefaultAutoScalingGroupInstanceRoleDefaultPolicyE07C1E22:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecs:CreateCluster
              - ecs:DeregisterContainerInstance
              - ecs:DiscoverPollEndpoint
              - ecs:Poll
              - ecs:RegisterContainerInstance
              - ecs:StartTelemetrySession
              - ecs:Submit*
              - ecr:GetAuthorizationToken
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: MyClusterDefaultAutoScalingGroupInstanceRoleDefaultPolicyE07C1E22
      Roles:
        - Ref: MyClusterDefaultAutoScalingGroupInstanceRole2724F473
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/InstanceRole/DefaultPolicy/Resource
  MyClusterDefaultAutoScalingGroupInstanceProfileFA0D4308:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: MyClusterDefaultAutoScalingGroupInstanceRole2724F473
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/InstanceProfile
  MyClusterDefaultAutoScalingGroupLaunchConfigBC1DAF04:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: ami-04770d89e9dedfa8b
      InstanceType: t2.micro
      IamInstanceProfile:
        Ref: MyClusterDefaultAutoScalingGroupInstanceProfileFA0D4308
      SecurityGroups:
        - Fn::GetAtt:
            - MyClusterDefaultAutoScalingGroupInstanceSecurityGroup5DFF182A
            - GroupId
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            - - |-
                #!/bin/bash
                echo ECS_CLUSTER=
              - Ref: MyCluster4C1BA579
              - >-2
                 >> /etc/ecs/ecs.config
                sudo iptables --insert FORWARD 1 --in-interface docker+ --destination 169.254.169.254/32 --jump DROP

                sudo service iptables save

                echo ECS_AWSVPC_BLOCK_IMDS=true >> /etc/ecs/ecs.config
    DependsOn:
      - MyClusterDefaultAutoScalingGroupInstanceRoleDefaultPolicyE07C1E22
      - MyClusterDefaultAutoScalingGroupInstanceRole2724F473
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/LaunchConfig
  MyClusterDefaultAutoScalingGroupASG88FB879B:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MaxSize: "2"
      MinSize: "1"
      DesiredCapacity: "2"
      LaunchConfigurationName:
        Ref: MyClusterDefaultAutoScalingGroupLaunchConfigBC1DAF04
      Tags:
        - Key: Name
          PropagateAtLaunch: true
          Value: TechShiftModernize/MyCluster/DefaultAutoScalingGroup
      VPCZoneIdentifier:
        - Ref: MyVpcPrivateSubnet1Subnet5057CF7E
        - Ref: MyVpcPrivateSubnet2Subnet0040C983
    UpdatePolicy:
      AutoScalingReplacingUpdate:
        WillReplace: true
      AutoScalingScheduledAction:
        IgnoreUnmodifiedGroupSizeProperties: true
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/ASG
  MyClusterDefaultAutoScalingGroupDrainECSHookTopic97F2832D:
    Type: AWS::SNS::Topic
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/DrainECSHook/Topic/Resource
  MyClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRole7C6047A2:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/DrainECSHook/Function/ServiceRole/Resource
  MyClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRoleDefaultPolicy211CB11C:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - autoscaling:CompleteLifecycleAction
              - ec2:DescribeInstances
              - ec2:DescribeInstanceAttribute
              - ec2:DescribeInstanceStatus
              - ec2:DescribeHosts
            Effect: Allow
            Resource: "*"
          - Action:
              - ecs:ListContainerInstances
              - ecs:SubmitContainerStateChange
              - ecs:SubmitTaskStateChange
              - ecs:DescribeContainerInstances
              - ecs:UpdateContainerInstancesState
              - ecs:ListTasks
              - ecs:DescribeTasks
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: MyClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRoleDefaultPolicy211CB11C
      Roles:
        - Ref: MyClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRole7C6047A2
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/DrainECSHook/Function/ServiceRole/DefaultPolicy/Resource
  MyClusterDefaultAutoScalingGroupDrainECSHookFunction165DCB21:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ZipFile: >
          import boto3, json, os, time


          ecs = boto3.client('ecs')

          autoscaling = boto3.client('autoscaling')



          def lambda_handler(event, context):
            print(json.dumps(event))
            cluster = os.environ['CLUSTER']
            snsTopicArn = event['Records'][0]['Sns']['TopicArn']
            lifecycle_event = json.loads(event['Records'][0]['Sns']['Message'])
            instance_id = lifecycle_event.get('EC2InstanceId')
            if not instance_id:
              print('Got event without EC2InstanceId: %s', json.dumps(event))
              return

            instance_arn = container_instance_arn(cluster, instance_id)
            print('Instance %s has container instance ARN %s' % (lifecycle_event['EC2InstanceId'], instance_arn))

            if not instance_arn:
              return

            while has_tasks(cluster, instance_arn):
              time.sleep(10)

            try:
              print('Terminating instance %s' % instance_id)
              autoscaling.complete_lifecycle_action(
                  LifecycleActionResult='CONTINUE',
                  **pick(lifecycle_event, 'LifecycleHookName', 'LifecycleActionToken', 'AutoScalingGroupName'))
            except Exception as e:
              # Lifecycle action may have already completed.
              print(str(e))


          def container_instance_arn(cluster, instance_id):
            """Turn an instance ID into a container instance ARN."""
            arns = ecs.list_container_instances(cluster=cluster, filter='ec2InstanceId==' + instance_id)['containerInstanceArns']
            if not arns:
              return None
            return arns[0]


          def has_tasks(cluster, instance_arn):
            """Return True if the instance is running tasks for the given cluster."""
            instances = ecs.describe_container_instances(cluster=cluster, containerInstances=[instance_arn])['containerInstances']
            if not instances:
              return False
            instance = instances[0]

            if instance['status'] == 'ACTIVE':
              # Start draining, then try again later
              set_container_instance_to_draining(cluster, instance_arn)
              return True

            tasks = instance['runningTasksCount'] + instance['pendingTasksCount']
            print('Instance %s has %s tasks' % (instance_arn, tasks))

            return tasks > 0


          def set_container_instance_to_draining(cluster, instance_arn):
            ecs.update_container_instances_state(
                cluster=cluster,
                containerInstances=[instance_arn], status='DRAINING')


          def pick(dct, *keys):
            """Pick a subset of a dict."""
            return {k: v for k, v in dct.items() if k in keys}
      Handler: index.lambda_handler
      Role:
        Fn::GetAtt:
          - MyClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRole7C6047A2
          - Arn
      Runtime: python3.6
      Environment:
        Variables:
          CLUSTER:
            Ref: MyCluster4C1BA579
      Tags:
        - Key: Name
          Value: TechShiftModernize/MyCluster/DefaultAutoScalingGroup
      Timeout: 310
    DependsOn:
      - MyClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRoleDefaultPolicy211CB11C
      - MyClusterDefaultAutoScalingGroupDrainECSHookFunctionServiceRole7C6047A2
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/DrainECSHook/Function/Resource
  MyClusterDefaultAutoScalingGroupDrainECSHookFunctionTopicSubscriptionA1C90601:
    Type: AWS::SNS::Subscription
    Properties:
      Endpoint:
        Fn::GetAtt:
          - MyClusterDefaultAutoScalingGroupDrainECSHookFunction165DCB21
          - Arn
      Protocol: lambda
      TopicArn:
        Ref: MyClusterDefaultAutoScalingGroupDrainECSHookTopic97F2832D
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/DrainECSHook/Function/TopicSubscription/Resource
  MyClusterDefaultAutoScalingGroupDrainECSHookFunctionTopic6623FFF2:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Ref: MyClusterDefaultAutoScalingGroupDrainECSHookFunction165DCB21
      Principal: sns.amazonaws.com
      SourceArn:
        Ref: MyClusterDefaultAutoScalingGroupDrainECSHookTopic97F2832D
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/DrainECSHook/Function/Topic
  MyClusterDefaultAutoScalingGroupLifecycleHookDrainHookRole6137CEC5:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: autoscaling.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/LifecycleHookDrainHook/Role/Resource
  MyClusterDefaultAutoScalingGroupLifecycleHookDrainHookRoleDefaultPolicy3AF9FD67:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: sns:Publish
            Effect: Allow
            Resource:
              Ref: MyClusterDefaultAutoScalingGroupDrainECSHookTopic97F2832D
        Version: "2012-10-17"
      PolicyName: MyClusterDefaultAutoScalingGroupLifecycleHookDrainHookRoleDefaultPolicy3AF9FD67
      Roles:
        - Ref: MyClusterDefaultAutoScalingGroupLifecycleHookDrainHookRole6137CEC5
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/LifecycleHookDrainHook/Role/DefaultPolicy/Resource
  MyClusterDefaultAutoScalingGroupLifecycleHookDrainHook3903963A:
    Type: AWS::AutoScaling::LifecycleHook
    Properties:
      AutoScalingGroupName:
        Ref: MyClusterDefaultAutoScalingGroupASG88FB879B
      LifecycleTransition: autoscaling:EC2_INSTANCE_TERMINATING
      DefaultResult: CONTINUE
      HeartbeatTimeout: 300
      NotificationTargetARN:
        Ref: MyClusterDefaultAutoScalingGroupDrainECSHookTopic97F2832D
      RoleARN:
        Fn::GetAtt:
          - MyClusterDefaultAutoScalingGroupLifecycleHookDrainHookRole6137CEC5
          - Arn
    DependsOn:
      - MyClusterDefaultAutoScalingGroupLifecycleHookDrainHookRoleDefaultPolicy3AF9FD67
      - MyClusterDefaultAutoScalingGroupLifecycleHookDrainHookRole6137CEC5
    Metadata:
      aws:cdk:path: TechShiftModernize/MyCluster/DefaultAutoScalingGroup/LifecycleHookDrainHook/Resource
  MySqlTaskDefTaskRole77A5F3FA:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: TechShiftModernize/MySqlTaskDef/TaskRole/Resource
  MySqlTaskDefFBD4D6EA:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Cpu: 256
          Environment:
            - Name: MYSQL_ROOT_PASSWORD
              Value: password
          Essential: true
          Image: mysql:5.7
          Links:
            []
          LinuxParameters:
            Capabilities:
              Add:
                []
              Drop:
                []
            Devices:
              []
            Tmpfs:
              []
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: LogGroupF5B46931
              awslogs-stream-prefix: mysql
              awslogs-region:
                Ref: AWS::Region
          Memory: 512
          MountPoints:
            []
          Name: MySql
          PortMappings:
            - ContainerPort: 3306
              HostPort: 3306
              Protocol: tcp
          Ulimits:
            []
          VolumesFrom:
            []
      Cpu: "256"
      ExecutionRoleArn:
        Fn::GetAtt:
          - MySqlTaskDefExecutionRole3674421C
          - Arn
      Family: MySqlTask
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - MySqlTaskDefTaskRole77A5F3FA
          - Arn
      Volumes:
        []
    Metadata:
      aws:cdk:path: TechShiftModernize/MySqlTaskDef/Resource
  MySqlTaskDefExecutionRole3674421C:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: TechShiftModernize/MySqlTaskDef/ExecutionRole/Resource
  MySqlTaskDefExecutionRoleDefaultPolicyAFEAEF9D:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - LogGroupF5B46931
                - Arn
        Version: "2012-10-17"
      PolicyName: MySqlTaskDefExecutionRoleDefaultPolicyAFEAEF9D
      Roles:
        - Ref: MySqlTaskDefExecutionRole3674421C
    Metadata:
      aws:cdk:path: TechShiftModernize/MySqlTaskDef/ExecutionRole/DefaultPolicy/Resource
  MySqlService86DE7DA9:
    Type: AWS::ECS::Service
    Properties:
      TaskDefinition:
        Ref: MySqlTaskDefFBD4D6EA
      Cluster:
        Ref: MyCluster4C1BA579
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 1
      LaunchType: FARGATE
      LoadBalancers:
        []
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - MySqlServiceSecurityGroup87F24831
                - GroupId
          Subnets:
            - Ref: MyVpcPrivateSubnet1Subnet5057CF7E
            - Ref: MyVpcPrivateSubnet2Subnet0040C983
      ServiceName: MySql
      ServiceRegistries:
        - RegistryArn:
            Fn::GetAtt:
              - MyCfnService
              - Arn
    Metadata:
      aws:cdk:path: TechShiftModernize/MySqlService/Service
  MySqlServiceSecurityGroup87F24831:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: TechShiftModernize/MySqlService/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:3306
          FromPort: 3306
          IpProtocol: tcp
          ToPort: 3306
      VpcId:
        Ref: MyVpcF9F0CA6F
    Metadata:
      aws:cdk:path: TechShiftModernize/MySqlService/SecurityGroup/Resource
  WordpressTaskDefExecutionRole9A38D4EE:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
      RoleName: WordpressTaskDefExecutionRole
    Metadata:
      aws:cdk:path: TechShiftModernize/WordpressTaskDefExecutionRole/Resource
  WordpressTaskDefExecutionRoleDefaultPolicy9DCBB898:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - LogGroupF5B46931
                - Arn
        Version: "2012-10-17"
      PolicyName: WordpressTaskDefExecutionRoleDefaultPolicy9DCBB898
      Roles:
        - Ref: WordpressTaskDefExecutionRole9A38D4EE
    Metadata:
      aws:cdk:path: TechShiftModernize/WordpressTaskDefExecutionRole/DefaultPolicy/Resource
  WordpressTaskDefTaskRole8CB1FAAA:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: TechShiftModernize/WordpressTaskDef/TaskRole/Resource
  WordpressTaskDefE60F8253:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Cpu: 256
          Environment:
            - Name: WORDPRESS_DB_HOST
              Value: "[object Object].[object Object]"
            - Name: WORDPRESS_DB_PASSWORD
              Value: password
          Essential: true
          Image: wordpress:4.6
          Links:
            []
          LinuxParameters:
            Capabilities:
              Add:
                []
              Drop:
                []
            Devices:
              []
            Tmpfs:
              []
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: LogGroupF5B46931
              awslogs-stream-prefix: wordpress
              awslogs-region:
                Ref: AWS::Region
          Memory: 512
          MountPoints:
            []
          Name: Wordpress
          PortMappings:
            - ContainerPort: 80
              HostPort: 80
              Protocol: tcp
          Ulimits:
            []
          VolumesFrom:
            []
      ExecutionRoleArn:
        Fn::GetAtt:
          - WordpressTaskDefExecutionRole9A38D4EE
          - Arn
      Family: WordpressTask
      NetworkMode: bridge
      PlacementConstraints:
        []
      RequiresCompatibilities:
        - EC2
      TaskRoleArn:
        Fn::GetAtt:
          - WordpressTaskDefTaskRole8CB1FAAA
          - Arn
      Volumes:
        []
    Metadata:
      aws:cdk:path: TechShiftModernize/WordpressTaskDef/Resource
  WordpressServiceEAED209E:
    Type: AWS::ECS::Service
    Properties:
      TaskDefinition:
        Ref: WordpressTaskDefE60F8253
      Cluster:
        Ref: MyCluster4C1BA579
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 2
      LaunchType: EC2
      LoadBalancers:
        - ContainerName: Wordpress
          ContainerPort: 80
          TargetGroupArn:
            Ref: LBListenerECSGroup1D445DF5
      PlacementConstraints:
        []
      PlacementStrategies:
        []
      SchedulingStrategy: REPLICA
      ServiceName: Wordpress
    DependsOn:
      - LBListenerECSGroup1D445DF5
      - LBListener49E825B4
    Metadata:
      aws:cdk:path: TechShiftModernize/WordpressService/Service
  LB8A12904C:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        []
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - LBSecurityGroup8A41EA2B
            - GroupId
      Subnets:
        - Ref: MyVpcPublicSubnet1SubnetF6608456
        - Ref: MyVpcPublicSubnet2Subnet492B6BFB
      Type: application
    DependsOn:
      - MyVpcPublicSubnet1DefaultRoute95FDF9EB
      - MyVpcPublicSubnet2DefaultRoute052936F6
    Metadata:
      aws:cdk:path: TechShiftModernize/LB/Resource
  LBSecurityGroup8A41EA2B:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatically created Security Group for ELB TechShiftModernizeLB0E677A71
      SecurityGroupEgress:
        []
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 80
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Ref: MyVpcF9F0CA6F
    Metadata:
      aws:cdk:path: TechShiftModernize/LB/SecurityGroup/Resource
  LBSecurityGrouptoTechShiftModernizeMyClusterDefaultAutoScalingGroupInstanceSecurityGroup9C164DE8806278ECD8:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId:
        Fn::GetAtt:
          - LBSecurityGroup8A41EA2B
          - GroupId
      IpProtocol: tcp
      Description: Load balancer to target
      DestinationSecurityGroupId:
        Fn::GetAtt:
          - MyClusterDefaultAutoScalingGroupInstanceSecurityGroup5DFF182A
          - GroupId
      FromPort: 80
      ToPort: 80
    Metadata:
      aws:cdk:path: TechShiftModernize/LB/SecurityGroup/to
        TechShiftModernizeMyClusterDefaultAutoScalingGroupInstanceSecurityGroup9C164DE8:80
  LBListener49E825B4:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: LBListenerECSGroup1D445DF5
          Type: forward
      LoadBalancerArn:
        Ref: LB8A12904C
      Port: 80
      Protocol: HTTP
      Certificates:
        []
    Metadata:
      aws:cdk:path: TechShiftModernize/LB/Listener/Resource
  LBListenerECSGroup1D445DF5:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId:
        Ref: MyVpcF9F0CA6F
      TargetGroupAttributes:
        []
      Targets:
        []
      TargetType: instance
    Metadata:
      aws:cdk:path: TechShiftModernize/LB/Listener/ECSGroup/Resource
  TargetGroup5xx43EFCD6E:
    Type: AWS::CloudWatch::Alarm
    Properties:
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 2
      Threshold: 1
      Dimensions:
        - Name: TargetGroup
          Value:
            Fn::GetAtt:
              - LBListenerECSGroup1D445DF5
              - TargetGroupFullName
        - Name: LoadBalancer
          Value:
            Fn::Join:
              - ""
              - - Fn::Select:
                    - 1
                    - Fn::Split:
                        - /
                        - Ref: LBListener49E825B4
                - /
                - Fn::Select:
                    - 2
                    - Fn::Split:
                        - /
                        - Ref: LBListener49E825B4
                - /
                - Fn::Select:
                    - 3
                    - Fn::Split:
                        - /
                        - Ref: LBListener49E825B4
      MetricName: HTTPCode_Target_5XX_Count
      Namespace: AWS/ApplicationELB
      Period: 300
      Statistic: Sum
    Metadata:
      aws:cdk:path: TechShiftModernize/TargetGroup5xx/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=0.22.0,@aws-cdk/assets=0.24.1,@aws-cdk/assets-docker=0.24.1,@aws-cdk/aws-applicationautoscaling=0.24.1,@aws-cdk/aws-autoscaling=0.24.1,@aws-cdk/aws-autoscaling-common=0.24.1,@aws-cdk/aws-certificatemanager=0.24.1,@aws-cdk/aws-cloudformation=0.24.1,@aws-cdk/aws-cloudwatch=0.24.1,@aws-cdk/aws-codedeploy-api=0.24.1,@aws-cdk/aws-codepipeline-api=0.24.1,@aws-cdk/aws-ec2=0.24.1,@aws-cdk/aws-ecr=0.24.1,@aws-cdk/aws-ecs=0.24.1,@aws-cdk/aws-elasticloadbalancingv2=0.24.1,@aws-cdk/aw [...]
Outputs:
  LoadBalancerDNS:
    Value:
      Fn::GetAtt:
        - LB8A12904C
        - DNSName
